--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ git+https://github.com/sjoertvv/sjoert@3308c1afe111693da0821b6d8b24a0439f0a648c
 requests
 catsHTM
 flarestack
+pytest
+pytest-cov
+nbval
 git+https://github.com/pschella/k3match@master
