--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ corner
 matplotlib
 astropy
 scipy
-numpy
+numpy>=1.17.0
 pandas
 git+https://github.com/sjoertvv/sjoert@3308c1afe111693da0821b6d8b24a0439f0a648c
 requests
