--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
+        cat requirements.txt | xargs -n 1 -L 1 $CONDA/bin/pip install install
         $CONDA/bin/pip install -e .
     - name: Test with pytest
       run: |
