--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,5 +21,5 @@ jobs:
         $CONDA/bin/pip install -e .
     - name: Test with pytest
       run: |
-        py.test --cov=at2019dsg --nbval-lax --current-env
-        coveralls
+        $CONDA/bin/pytest --cov=at2019dsg --nbval-lax --current-env
+        $CONDA/bin/coveralls
