--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -15,10 +15,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install latex
+      run: sudo apt-get install texlive-base
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
-        cat requirements.txt | xargs -n 1 -L 1 $CONDA/bin/pip install install
+        cat requirements.txt | xargs -n 1 -L 1 $CONDA/bin/pip install
         $CONDA/bin/pip install -e .
     - name: Test with pytest
       run: |
